force-app/main/default/objects/cdcpc__RD_Manufacturing_Documents_Translation__c/cdcpc__RD_Manufacturing_Documents_Translation__c.object-meta.xml
<CustomObject>
    <label>RD Manufacturing Documents Translation</label>
    <nameField>
        <label>RD Manufacturing Documents Translation</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RD Manufacturing Documents Translation</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>