force-app/main/default/objects/cdcpc__RD_Manufacturing_Documents_Translation__c/fields/cdcpc__Detail_Query_Dependencies2__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__Detail_Query_Dependencies2__c</fullName>
    <formula>&quot;{&quot; +
    &quot;\&quot;Criteria\&quot;:\&quot;&quot; +


        cdcpc__Filter_Num1__c +
        cdcpc__Filter_Num2__c +
        cdcpc__Filter_Num3__c +

    &quot;\&quot;&quot; +
&quot;}&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Detail Query Dependencies 2</label>
    <type>Text</type>
</CustomField>