force-app/main/default/objects/cdcpc__RD_Manufacturing_Documents_Translation__c/fields/cdcpc__Detail_Query_Dependencies__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__Detail_Query_Dependencies__c</fullName>
    <formula>&quot;{&quot; +
        &quot;\&quot;Attribute\&quot;:\&quot;&quot; + LOWER(cdcpc__Document_Type__c) + &quot;\&quot;,&quot; +
        &quot;\&quot;KeyField\&quot;:\&quot;Document_Type__c\&quot;,&quot; +
        &quot;\&quot;SelectFields\&quot;:\&quot;Id, Document_Type__c,Document__c, Document_Id__c, Revision__c, DimA__c, DimB__c, DimC__c, DimD__c, DimE__c, DimF__c, DWGNO__c, DrawingID__c \&quot;,&quot; +
        &quot;\&quot;DetailObject\&quot;:\&quot;RD_Manufacturing_Document_Details__c\&quot;,&quot; +
        &quot;\&quot;Criteria\&quot;:\&quot;&quot; +

            cdcpc__Filter_Text1__c +
            cdcpc__Filter_Text2__c +
            cdcpc__Filter_Text3__c +
            cdcpc__Filter_Text4__c +
            cdcpc__Filter_Text5__c +
            cdcpc__Filter_Text6__c +
            cdcpc__Filter_Text7__c +

        &quot;\&quot;,&quot; +
        &quot;\&quot;DependentAttributes\&quot;: [&quot; +

 IF(NOT(ISBLANK(cdcpc__Text1__c)), &quot;\&quot;&quot; + LOWER(cdcpc__Text1__c) + &quot;\&quot;, &quot;, &quot;&quot;) +
 IF(NOT(ISBLANK(cdcpc__Text2__c)), &quot;\&quot;&quot; + LOWER(cdcpc__Text2__c) + &quot;\&quot;, &quot;, &quot;&quot;) +
 IF(NOT(ISBLANK(cdcpc__Text3__c)), &quot;\&quot;&quot; + LOWER(cdcpc__Text3__c) + &quot;\&quot;, &quot;, &quot;&quot;) +
 IF(NOT(ISBLANK(cdcpc__Text4__c)), &quot;\&quot;&quot; + LOWER(cdcpc__Text4__c) + &quot;\&quot;, &quot;, &quot;&quot;) +
 IF(NOT(ISBLANK(cdcpc__Text5__c)), &quot;\&quot;&quot; + LOWER(cdcpc__Text5__c) + &quot;\&quot;, &quot;, &quot;&quot;) +
 IF(NOT(ISBLANK(cdcpc__Text6__c)), &quot;\&quot;&quot; + LOWER(cdcpc__Text6__c) + &quot;\&quot;, &quot;, &quot;&quot;) +
 IF(NOT(ISBLANK(cdcpc__Text7__c)), &quot;\&quot;&quot; + LOWER(cdcpc__Text7__c) + &quot;\&quot;, &quot;, &quot;&quot;) +
 IF(NOT(ISBLANK(cdcpc__Num1__c )), &quot;\&quot;&quot; + LOWER(cdcpc__Num1__c)  + &quot;\&quot;, &quot;, &quot;&quot;) +
 IF(NOT(ISBLANK(cdcpc__Num2__c )), &quot;\&quot;&quot; + LOWER(cdcpc__Num2__c) + &quot;\&quot;, &quot;, &quot;&quot;) +
 IF(NOT(ISBLANK(cdcpc__Num3__c )), &quot;\&quot;&quot; + LOWER(cdcpc__Num3__c) + &quot;\&quot;, &quot;, &quot;&quot;) +

 &quot;null]&quot; +
 &quot;}&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Detail Query Dependencies</label>
    <type>Text</type>
</CustomField>