force-app/main/default/objects/cdcpc__RD_Manufacturing_Documents_Translation__c/fields/cdcpc__Document_Type__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__Document_Type__c</fullName>
    <label>Document Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>