force-app/main/default/objects/cdcpc__RD_Manufacturing_Documents_Translation__c/fields/cdcpc__Num1__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__Num1__c</fullName>
    <label>Num1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>