force-app/main/default/objects/cdcpc__RD_Manufacturing_Documents_Translation__c/listViews/cdcpc__All.listView-meta.xml
<ListView>
    <fullName>cdcpc__All</fullName>
    <columns>NAME</columns>
    <columns>cdcpc__Document_Type__c</columns>
    <columns>cdcpc__Text1__c</columns>
    <columns>cdcpc__Text2__c</columns>
    <columns>cdcpc__Text3__c</columns>
    <columns>cdcpc__Text4__c</columns>
    <columns>cdcpc__Text5__c</columns>
    <columns>cdcpc__Text6__c</columns>
    <columns>cdcpc__TextOpp1__c</columns>
    <columns>cdcpc__TextOpp2__c</columns>
    <columns>cdcpc__TextOpp3__c</columns>
    <columns>cdcpc__TextOpp4__c</columns>
    <columns>cdcpc__TextOpp5__c</columns>
    <columns>cdcpc__TextOpp6__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>